5177
I don't get any exception here. And even if I actually change Nameclash to nameclash in the companion object, then we get correct error message:
```scala
test.scala:2: error: name clash: class Example1 defines object nameclash
and its companion object Example1 also defines object nameclash
	object nameclash {
               ^
one error found
```

Can you verify your test case? (I tested it against 2.8.1 and recent trunk)
